@@ -67,7 +67,7 @@ public abstract class PlatOnContract extends ManagedTransaction {
     protected PlatOnContract(String contractAddress, String chainId,
                              Web3j web3j, Credentials credentials) {
 
-        this(contractAddress, web3j, new RawTransactionManager(web3j, credentials, new Byte(chainId)));
+        this(contractAddress, web3j, new RawTransactionManager(web3j, credentials, Long.valueOf(chainId)));
     }
 
     /**
@@ -244,7 +244,9 @@ public abstract class PlatOnContract extends ManagedTransaction {
 
         List<EventValuesWithLog> eventValuesWithLogList = extractEventParametersWithLog(event, transactionReceipt);
 
-        return JSONUtil.parseObject(getResponseFromLog(transactionReceipt, eventValuesWithLogList), BaseResponse.class);
+        BaseResponse result = JSONUtil.parseObject(getResponseFromLog(transactionReceipt, eventValuesWithLogList), BaseResponse.class);
+        result.transactionReceipt = transactionReceipt;
+        return result;
     }
 
     private String getResponseFromLog(TransactionReceipt transactionReceipt, List<EventValuesWithLog> eventValuesWithLogList) throws TransactionException {
